2662 [IFOParser]            fixed sometimes not able to get the language information
2661 [Main]                 reverted 2639. Bug #843
2660 [Presets]              fixed not changing the selected preset if no change has been made in the configuration window. Bug #844
2659 [VobSubber]            fixed subtitle export for multi-angle discs
2658 [OneClick]+[FileIndexer] only use pgcdemux if it is a multi-pgc or multi-angle DVD source
2657 [IFOParser]            add subtitle type only if there are multiple types
2656 [OneClick]+[ChapterCreator] improved DVD/Blu-ray structure detection
2655 [IFOParser]            fixed missing first subtitle track if it contains more than one subtitle type
                            added type information (4:3/wide/letterbox/pan&scan) to the description of the subtitle track
                            added multi-angle detection
2653 [AudioEncoder]         fixed an error when aborting the job during the initial steps
2652 [HD Streams Extractor] for DVD/Blu-ray sources a prefix and suffix is attached to the output file name. Feature request #597
                            added warning if "Haali Matroska Muxer" is required
2651 [FileIndexer]          added IFO as supported input files
                            improved PGC handling
2650 [OneClick] +           for DVD/Blu-ray sources a prefix and suffix is attached to the output file name. Feature request #597
     [FileIndexer]          pgcdemux will be used in any case as a workaround for multi-angle DVDs
	                        added MPLS as supported input files (OneClick)
2649 [ChapterCreator]       added the PGC number to the output as suffix
2648 [VobSubber]            added the PGC number to the output as suffix
                            preselect tracks based on the default language(s)
                            improved logging
2647 [PGCDemux]             changed where the intermediate files are created